--- a/src/assets/style/header.css
+++ b/src/assets/style/header.css
@@ -1,9 +1,6 @@
-header {
+section {
     display: flex;
     justify-content: space-between;
-    width: 100%;
-    height: 150px;
-   margin-top: 20px;
   }
   
   nav {
@@ -15,3 +12,11 @@ header {
     font-size: 1.2rem;
   }
   
+  header {
+    position: sticky;
+    top: 0;
+    background: rgb(25 27 31 / 34%);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    z-index: 100;
+  }
