--- a/src/assets/style/resume.css
+++ b/src/assets/style/resume.css
@@ -1,28 +1,49 @@
-#blocs {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 65%;
-  }
+.sections {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
   
-  #formation {
+  .formation {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 70%;
   }
   .bloc {
     display: flex;
     flex-direction: column;
-    width: 80%;
     padding: 20px;
     margin: 20px;
     background-color: rgb(255 255 255);
     border-radius: 5px;
     box-shadow: 0px 2px 5px rgba(128, 128, 128, 0.822);
   }
-  
+
+  .objectifs {
+    display: flex;
+    height: 50px;
+    align-items: center;
+    width: 300px;
+    justify-content: space-between;
+  }
+    .objectifs  :hover {
+    cursor: pointer;  
+    }
+
+
+.cours {
+  display: flex;
+  height: 50px;
+  align-items: center;
+  width: 150px;
+  justify-content: space-between;
+}
+  .cours :hover {
+  cursor: pointer;  
+  }
+
   .bloc h2 {
     color: rgba(47, 79, 79, 0.822);
   }
@@ -69,15 +90,12 @@ img{
   transform: rotate(180deg);
 }
 
+.icon-grid {
+  display: block;
+}
 
-  @media screen and (max-width: 768px) {
-    #blocs {
-      width: 100%;
-    }
-    .bloc {
-      width: 100%;
-    }
-    #experience-pro {
-      width: 84%;
-    }
+@media screen and (max-width: 320px) {
+  .formation {
+    width: 100%;
+  }
   }
