--- a/src/assets/style/skills.css
+++ b/src/assets/style/skills.css
@@ -1,6 +1,6 @@
-#container {
-    width: 31%;
-    height: 753px;
+.container-skills {
+    width: 30%;
+    height: 800px;
     background-color: rgb(255 255 255);
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -8,7 +8,7 @@
     padding: 0;
     }
     
-  #container-onglets {
+.container-onglets {
     background: rgba(73, 90, 84, 0.178);
     width: 100%;
     height: 20%;
@@ -77,60 +77,14 @@
   }
   
   @media screen and (max-width: 768px) {
-  #container {
-    width: 84%;
-    height: 586px;
-    background-color: rgb(255 255 255);
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    margin: 20px 107px;
-    padding: 0;
-}
-#container-onglets {
-  background: rgba(73, 90, 84, 0.178);
-  width: 40%;
-  height: 69%;
-  border-bottom: 1px solid #f1f1f1;
-  flex-direction: column;
-  position: absolute;
-}
-.onglets {
-  width: 100%;
-  height: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.3rem;
-  font-weight: 700;
-  cursor: pointer;
-  padding: 10px;
-}
-
-.contenu {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  margin-left: 40%;
-  position: absolute;
-  opacity: 0;
-  line-height: 22px;
-  padding: 10px;
-}
-
-#list-hard-skills {
-  display: flex;
-  width: 700px;
-}
-
-}
-
-
-@media screen and (max-width: 500px){
-  #container-onglets {
-    width: 60%;
-  }
-  
   .contenu {
-    margin-left: 70%;
+    width : 370px
   }
-}
+  }
+
+  @media screen and (max-width: 320px) {
+    .container-skills {
+      width: 88%;  
+      margin-left: 30px;
+    }
+    }
