--- a/src/App.css
+++ b/src/App.css
@@ -156,3 +156,505 @@ width: 300px;
 }
 
 
+/* --------------------------CONTACTS----------------------------------- */
+footer {
+  width: 100%;
+    background-color: #333;;
+    text-align: center;
+    border-radius: 5px 5px 0px 0px;;
+  }
+  
+  footer  h2 {
+    color: white;
+    padding: 10px;
+    font-size: 2rem;
+  }
+  
+  
+  .link-contact{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  }
+  
+  a {
+    cursor: pointer;
+    text-decoration: none;
+    padding: 2px 1px 0;
+    margin: 10px;
+    color: white;
+  }
+  
+  a:hover {
+  text-decoration: underline;
+  
+    }
+
+
+/* -------------------GALLERY-------------------------------- */
+.gallery-title {
+  display: flex;
+  justify-content: center;
+  padding-top: 40px;
+}
+
+.gallery-section {
+  width: auto;
+  border-radius: 25px;
+  margin: auto;
+  display: block;
+}
+  
+.gallery-items {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 0;
+  padding: 30px 20px;
+  }
+
+.gallery-item {
+  list-style-type: none;
+  margin: 20px;
+  border-radius: 10px;
+  display: flex;
+  align-items: flex-end;
+}
+
+
+.gallery-item-title {
+  display: none; 
+  opacity: 0; /* Ajoutez cette ligne pour cacher le titre par défaut */
+  transition: opacity 0.5s ease;
+}
+
+.gallery-item-title.show {
+  display: block;
+  position: absolute;
+  color: white;
+  z-index: 100;
+  width: 350px;
+  height: 350px;
+  padding-left: 30px;
+font-size: 2em;
+font-weight: bold;
+opacity: 1; /* Ajoutez cette ligne pour afficher le titre */
+transition: opacity 0.5s ease;
+}
+
+.gallery-item-image {
+  width: 390px;
+  height: 400px;
+  object-fit: cover;
+  border-radius: 10px;
+  transition: opacity 0.3s ease;
+}
+.gallery-item-image.hovered {
+opacity: 0.2;
+}
+/* -------------------HEADER-------------------------------- */
+section {
+  display: flex;
+  justify-content: space-between;
+}
+
+nav {
+  display: flex;
+  padding: 10px;
+}
+nav a {
+  color: #f1f1f1;
+  font-size: 1.2rem;
+}
+
+header {
+  position: sticky;
+  top: 0;
+  background: rgb(25 27 31 / 34%);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  z-index: 100;
+}
+
+/* -------------------INTRO-------------------------------- */
+.introduction {
+  display: flex;
+  justify-content: center ;
+  align-items: center;
+  padding-top: 50px;
+}
+
+.contenu-introduction {
+  position: relative;
+  width: 75%;
+  padding: 30px;
+}
+
+.portrait {
+width :245px; 
+height :245px;
+position: relative;
+overflow: hidden;
+float: left;
+margin :20px;
+shape-outside: circle();
+}
+
+.photo-portrait{
+  height: inherit;
+  width: inherit;
+  border: 0.7rem solid rgb(92,113,113);
+  border-radius : 50%;
+}
+
+.title-logo-introduction {
+  display: flex;
+}
+.title-introduction {
+  font-size: 2.5rem;
+  color: white;
+  padding-bottom: 20px;
+}
+.text-introduction {
+  color: white;
+  font-size: 1.5rem;
+  line-height: 1.7;
+}
+.text-github {
+color: #adb5bd;
+font-size: 1.1em;
+}
+
+
+img{
+  width: 50px;
+  height: 50px;
+}
+
+/* -------------------JOKE-------------------------------- */
+.custom-button {
+  margin: 50px;
+  background-color: rgb(39,60,61);
+  border-color:rgb(39,60,61);
+  color: white;
+  font-size: 1.5em;
+  
+}
+
+.custom-button:hover {
+  background-color: rgb(92, 108, 109);
+  border-color:rgb(92, 108, 109);
+}
+
+
+/* -------------------PROJECT-------------------------------- */
+
+.main-container {
+  /* background-image: url(../images/background1.png); */
+  background-size: cover;
+background-position: center;
+  margin: 30px 10%;
+  box-shadow: 0 0 5px rgba(0,0,0,.18);
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.second-container {
+  border-top: 1px solid rgba(0,0,0,.18);
+}
+
+.title-container {
+  font-size:2em;
+  /* display: flex;
+  justify-content: center; */
+  font-weight: bold;
+}
+
+.title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 17px;
+  margin-top: 17px;
+  
+}
+
+.description {
+  margin-bottom: 10px;
+  font-size: 1.1em;
+  line-height: 1.5;
+  padding: 0 20px 20px 20px;
+  color: black;
+}
+
+.commit {
+  font-size: 1.1em;
+  color: black;
+  padding-top: 10px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+}
+.links {
+  color: black;
+  padding: 0 10px 10px 0px;
+  margin: 0px;
+  justify-content: center;
+  display: flex;
+  font-size: 1.1em;
+  font-weight: 600;
+}
+
+.links a {
+  display: inline-block;
+  margin-right: 10px;
+}
+.technologies {
+  display: flex;
+flex-wrap: wrap;
+}
+.technologie {
+  display: flex;
+  align-items: center;
+  padding: 10px 20px 0 0;
+}
+
+.technologie h4 {
+  margin-right: 10px;
+}
+
+.technologie img {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+.gallery-photo {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.gallery-photo img {
+  width: 600px;
+  height: 400px;
+  object-fit: cover;
+  margin: 10px;
+  border: 10px solid rgb(39,60,62);
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    max-width: 90%;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .gallery-photo {
+    flex-direction: column;
+    align-content: center;
+  }
+  .gallery-photo img {
+    width: 450px;
+    height: 290px;
+  }
+
+  .main-container {
+    margin: 0;
+  }
+}
+
+/* -------------------RESUME-------------------------------- */
+.sections {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+  
+  .formation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 70%;
+  }
+  .bloc {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    margin: 20px;
+    background-color: rgb(255 255 255);
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px rgba(128, 128, 128, 0.822);
+  }
+
+  .objectifs {
+    display: flex;
+    height: 50px;
+    align-items: center;
+    width: 300px;
+    justify-content: space-between;
+  }
+    .objectifs  :hover {
+    cursor: pointer;  
+    }
+
+
+.cours {
+  display: flex;
+  height: 50px;
+  align-items: center;
+  width: 150px;
+  justify-content: space-between;
+}
+  .cours :hover {
+  cursor: pointer;  
+  }
+
+  .bloc h2 {
+    color: rgba(47, 79, 79, 0.822);
+  }
+  
+  .bloc i {
+    color : rgba(47, 79, 79, 0.822);
+  }
+  
+  .bloc strong {
+    font-weight: 700;
+    font-size: 1rem;
+  }
+  
+  .list-block{
+    padding-top: 10px;
+    padding-left: 20px;
+    font-size: 1.1rem;
+    font-weight: 400;
+  }
+  
+  .lieu-date {
+    font-size: 1rem;
+    font-weight: 600;
+    padding-top: 5px;
+    color: rgba(47, 79, 79, 0.822);
+  }
+  
+  li a ,#link-download {
+    color: rgba(47, 79, 79, 0.822);
+    font-size: 0.9rem;
+    font-weight: 600;
+  }
+
+img{
+  width: 30px;
+  height: 30px;
+  border-color: black;
+}
+
+.arrow-up{
+  transform: rotate(0deg); 
+}
+.arrow-down{
+  transform: rotate(180deg);
+}
+
+.icon-grid {
+  display: block;
+}
+
+@media screen and (max-width: 320px) {
+  .formation {
+    width: 100%;
+  }
+  }
+
+/* -------------------SKILLS-------------------------------- */
+.container-skills {
+  width: 30%;
+  height: 800px;
+  background-color: rgb(255 255 255);
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  margin: 20px 0;
+  padding: 0;
+  }
+  
+.container-onglets {
+  background: rgba(73, 90, 84, 0.178);
+  width: 100%;
+  height: 20%;
+  display: flex;
+  border-bottom:1px solid #f1f1f1;;
+}
+  
+.onglets {
+  width: 220px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.3rem;
+  font-weight: 700;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.onglets:not(:nth-child(2)) {
+  /* on veut donner une bordure aux deux premier mais pas au troisiéme */
+  border-right : 1px solid #f1f1f1;
+}
+
+.contenu {
+width: 404px;
+position: absolute;
+opacity: 0;
+line-height: 22px;
+padding: 10px ;
+}
+
+.contenu h4 {
+  padding: 10px;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  color: rgba(47, 79, 79, 0.822);
+}
+
+.li-principal {
+  padding : 10px 0 0 0 ;
+  font-weight: 700;
+}
+
+.li-secondaire {
+  font-weight : 500;
+}
+.active {
+  background: rgba(47, 79, 79, 0.63);
+  color : white;
+  font-size: 1.3rem;
+  transition: all 0.3s ease;
+  
+}
+
+.activeContenu {
+  animation: fade 0.5s forwards
+}
+ 
+@keyframes fade {
+  from {
+    opacity : 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@media screen and (max-width: 768px) {
+.contenu {
+  width : 370px
+}
+}
+
+@media screen and (max-width: 320px) {
+  .container-skills {
+    width: 88%;  
+    margin-left: 30px;
+  }
+  }
