--- a/src/App.css
+++ b/src/App.css
@@ -351,7 +351,7 @@ img{
 /* -------------------PROJECT-------------------------------- */
 
 .main-container {
-  /* background-image: url(../images/background1.png); */
+  background-image: url(./assets/images/background1.png);
   background-size: cover;
 background-position: center;
   margin: 30px 10%;
