--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,11 @@ i {
   color: #e6e9e9;
 }
 
-
+@media screen and (max-width: 425px){
+h1 {
+  font-size: 3em;
+}
+}
 
 /* ------------------------------------------ */
 
@@ -374,8 +378,6 @@ background-position: center;
 
 .title-container {
   font-size:2em;
-  /* display: flex;
-  justify-content: center; */
   font-weight: bold;
 }
 
@@ -663,6 +665,7 @@ padding: 10px ;
 @media screen and (max-width: 425px) {
   .container-skills {
     width: 88%;  
+    height: 850px;
     margin-left: 30px;
   }
   }
